Java6 SE 1.6.0.45