@@ -1,8 +1,8 @@
 /*
- * @(#)DropTarget.java	1.48 03/12/19
+ * %W% %E%
  *
- * Copyright 2004 Sun Microsystems, Inc. All rights reserved.
- * SUN PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
+ * Copyright (c) 2006, Oracle and/or its affiliates. All rights reserved.
+ * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  */
 
 package java.awt.dnd;
@@ -44,7 +44,7 @@ import java.awt.dnd.peer.DropTargetPeer;
  * The default <code>FlavorMap</code> hereafter designates the
  * <code>FlavorMap</code> returned by <code>SystemFlavorMap.getDefaultFlavorMap()</code>. 
  * 
- * @version 	1.48, 12/19/03
+ * @version 	%I%, %G%
  * @since 1.2
  */
 
@@ -94,7 +94,11 @@ public class DropTarget implements DropTargetListener, Serializable {
 	    setActive(act);
 	}
 
-        if (fm != null) flavorMap = fm;
+        if (fm != null) {
+            flavorMap = fm;
+        } else {
+            flavorMap = SystemFlavorMap.getDefaultFlavorMap();
+        }
     }
 
     /**
@@ -215,7 +219,7 @@ public class DropTarget implements DropTargetListener, Serializable {
      * Gets the <code>Component</code> associated 
      * with this <code>DropTarget</code>.
      * <P>
-     * @return the current </code>Component</code>
+     * @return the current <code>Component</code>
      */
 
     public synchronized Component getComponent() {
@@ -622,8 +626,8 @@ public class DropTarget implements DropTargetListener, Serializable {
 
 	    Toolkit t  = Toolkit.getDefaultToolkit();
 
-	    Integer    initial  = new Integer(100);
-	    Integer    interval = new Integer(100);
+	    Integer    initial  = Integer.valueOf(100);
+	    Integer    interval = Integer.valueOf(100);
 
 	    try {
 		initial = (Integer)t.getDesktopProperty("DnD.Autoscroll.initialDelay");
@@ -834,5 +838,5 @@ public class DropTarget implements DropTargetListener, Serializable {
      * The FlavorMap
      */
 
-    private transient FlavorMap flavorMap = SystemFlavorMap.getDefaultFlavorMap();
+    private transient FlavorMap flavorMap;
 }
