@@ -1,8 +1,6 @@
 /*
- * @(#)ObjectStreamClass.java	1.138 05/12/01
- *
- * Copyright 2004 Sun Microsystems, Inc. All rights reserved.
- * SUN PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
+ * Copyright (c) 1996, 2011, Oracle and/or its affiliates. All rights reserved.
+ * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  */
 
 package java.io;
@@ -39,14 +37,14 @@ import sun.reflect.ReflectionFactory;
  * loaded in this Java VM can be found/created using the lookup method.
  * 
  * <p>The algorithm to compute the SerialVersionUID is described in 
- * <a href="../../../guide/serialization/spec/class.doc4.html">Object
- * Serialization Specification, Section 4.4, Stream Unique Identifiers</a>.
+ * <a href="../../../platform/serialization/spec/class.html#4100">Object
+ * Serialization Specification, Section 4.6, Stream Unique Identifiers</a>.
  *
  * @author	Mike Warres
  * @author	Roger Riggs
- * @version 1.98 02/02/00
+ * @version %I%, %G%
  * @see ObjectStreamField
- * @see <a href="../../../guide/serialization/spec/class.doc.html">Object Serialization Specification, Section 4, Class Descriptors</a>
+ * @see <a href="../../../platform/serialization/spec/class.html">Object Serialization Specification, Section 4, Class Descriptors</a>
  * @since   JDK1.1
  */
 public class ObjectStreamClass implements Serializable {
@@ -166,10 +164,23 @@ public class ObjectStreamClass implements Serializable {
     }
     
     /**
-     * The name of the class described by this descriptor.
+     * Returns the descriptor for any class, regardless of whether it
+     * implements {@link Serializable}.
      *
-     * @return	a <code>String</code> representing the fully qualified name of
-     * 		the class
+     * @param        cl class for which to get the descriptor
+     * @return       the class descriptor for the specified class
+     * @since 1.6
+     */
+    public static ObjectStreamClass lookupAny(Class<?> cl) {
+	return lookup(cl, true);
+    }
+	
+    /**
+     * Returns the name of the class described by this descriptor.
+     * This method returns the name of the class in the format that
+     * is used by the {@link Class#getName} method.
+     *
+     * @return a string representing the name of the class
      */
     public String getName() {
 	return name;
@@ -189,7 +200,7 @@ public class ObjectStreamClass implements Serializable {
 	    suid = (Long) AccessController.doPrivileged(
 		new PrivilegedAction() {
 		    public Object run() {
-			return new Long(computeDefaultSUID(cl));
+			return Long.valueOf(computeDefaultSUID(cl));
 		    }
 		}
 	    );
@@ -400,11 +411,15 @@ public class ObjectStreamClass implements Serializable {
 	    AccessController.doPrivileged(new PrivilegedAction() {
 		public Object run() {
 		    if (isEnum) {
-			suid = new Long(0);
+			suid = Long.valueOf(0);
 			fields = NO_FIELDS;
 			return null;
 		    }
-
+		    if (cl.isArray()) {
+			fields = NO_FIELDS;
+			return null;
+		    }
+	
 		    suid = getDeclaredSUID(cl);
 		    try {
 			fields = getSerialFields(cl);
@@ -425,19 +440,18 @@ public class ObjectStreamClass implements Serializable {
 			    new Class[] { ObjectInputStream.class }, 
 			    Void.TYPE);
 			readObjectNoDataMethod = getPrivateMethod(
-			    cl, "readObjectNoData", 
-			    new Class[0], Void.TYPE);
+			    cl, "readObjectNoData", null, Void.TYPE);
 			hasWriteObjectData = (writeObjectMethod != null);
 		    }
 		    writeReplaceMethod = getInheritableMethod(
-			cl, "writeReplace", new Class[0], Object.class);
+			cl, "writeReplace", null, Object.class);
 		    readResolveMethod = getInheritableMethod(
-			cl, "readResolve", new Class[0], Object.class);
+			cl, "readResolve", null, Object.class);
 		    return null;
 		}
 	    });
 	} else {
-	    suid = new Long(0);
+	    suid = Long.valueOf(0);
 	    fields = NO_FIELDS;
 	}
 
@@ -484,7 +498,7 @@ public class ObjectStreamClass implements Serializable {
 	this.superDesc = superDesc;
 	isProxy = true;
 	serializable = true;
-	suid = new Long(0);
+	suid = Long.valueOf(0);
 	fields = NO_FIELDS;
 	
 	if (cl != null) {
@@ -516,7 +530,7 @@ public class ObjectStreamClass implements Serializable {
 	this.resolveEx = resolveEx;
 	this.superDesc = superDesc;
 	name = model.name;
-	suid = new Long(model.getSerialVersionUID());
+	suid = Long.valueOf(model.getSerialVersionUID());
 	isProxy = false;
 	isEnum = model.isEnum;
 	serializable = model.serializable;
@@ -598,7 +612,7 @@ public class ObjectStreamClass implements Serializable {
 	throws IOException, ClassNotFoundException
     {
 	name = in.readUTF();
-	suid = new Long(in.readLong());
+	suid = Long.valueOf(in.readLong());
 	isProxy = false;
 
 	byte flags = in.readByte();
@@ -694,7 +708,10 @@ public class ObjectStreamClass implements Serializable {
      */
     void checkDeserialize() throws InvalidClassException {
 	if (deserializeEx != null) {
-	    throw deserializeEx;
+	    InvalidClassException ice = 
+		new InvalidClassException(deserializeEx.classname,
+					  deserializeEx.getMessage());
+	    throw ice;
 	}
     }
     
@@ -705,7 +722,10 @@ public class ObjectStreamClass implements Serializable {
      */
     void checkSerialize() throws InvalidClassException {
 	if (serializeEx != null) {
-	    throw serializeEx;
+	    InvalidClassException ice = 
+		new InvalidClassException(serializeEx.classname,
+					  serializeEx.getMessage());
+	    throw ice;
 	}
     }
 
@@ -718,7 +738,10 @@ public class ObjectStreamClass implements Serializable {
      */
     void checkDefaultSerialize() throws InvalidClassException {
 	if (defaultSerializeEx != null) {
-	    throw defaultSerializeEx;
+	    InvalidClassException ice = 
+		new InvalidClassException(defaultSerializeEx.classname,
+					  defaultSerializeEx.getMessage());
+	    throw ice;
 	}
     }
 
@@ -893,7 +916,7 @@ public class ObjectStreamClass implements Serializable {
     {
 	if (cons != null) {
 	    try {
-		return cons.newInstance(null);
+		return cons.newInstance();
 	    } catch (IllegalAccessException ex) {
 		// should not occur, as access checks have been suppressed
 		throw new InternalError();
@@ -973,7 +996,7 @@ public class ObjectStreamClass implements Serializable {
     {
 	if (readObjectNoDataMethod != null) {
 	    try {
-		readObjectNoDataMethod.invoke(obj, null);
+		readObjectNoDataMethod.invoke(obj, (Object[]) null);
 	    } catch (InvocationTargetException ex) {
 		Throwable th = ex.getTargetException();
 		if (th instanceof ObjectStreamException) {
@@ -1001,7 +1024,7 @@ public class ObjectStreamClass implements Serializable {
     {
 	if (writeReplaceMethod != null) {
 	    try {
-		return writeReplaceMethod.invoke(obj, null);
+		return writeReplaceMethod.invoke(obj, (Object[]) null);
 	    } catch (InvocationTargetException ex) {
 		Throwable th = ex.getTargetException();
 		if (th instanceof ObjectStreamException) {
@@ -1030,7 +1053,7 @@ public class ObjectStreamClass implements Serializable {
     {
 	if (readResolveMethod != null) {
 	    try {
-		return readResolveMethod.invoke(obj, null);
+		return readResolveMethod.invoke(obj, (Object[]) null);
 	    } catch (InvocationTargetException ex) {
 		Throwable th = ex.getTargetException();
 		if (th instanceof ObjectStreamException) {
@@ -1266,7 +1289,7 @@ public class ObjectStreamClass implements Serializable {
      */
     private static Constructor getExternalizableConstructor(Class cl) {
 	try {
-	    Constructor cons = cl.getDeclaredConstructor(new Class[0]);
+	    Constructor cons = cl.getDeclaredConstructor((Class[]) null);
 	    cons.setAccessible(true);
 	    return ((cons.getModifiers() & Modifier.PUBLIC) != 0) ? 
 		cons : null;
@@ -1288,7 +1311,7 @@ public class ObjectStreamClass implements Serializable {
 	    }
 	}
 	try {
-	    Constructor cons = initCl.getDeclaredConstructor(new Class[0]);
+	    Constructor cons = initCl.getDeclaredConstructor((Class[]) null);
 	    int mods = cons.getModifiers();
 	    if ((mods & Modifier.PRIVATE) != 0 ||
 		((mods & (Modifier.PUBLIC | Modifier.PROTECTED)) == 0 &&
@@ -1398,7 +1421,7 @@ public class ObjectStreamClass implements Serializable {
      * Returns JVM type signature for given class.
      */
     static String getClassSignature(Class cl) {
-	StringBuffer sbuf = new StringBuffer();
+	StringBuilder sbuf = new StringBuilder();
 	while (cl.isArray()) {
 	    sbuf.append('[');
 	    cl = cl.getComponentType();
@@ -1437,7 +1460,7 @@ public class ObjectStreamClass implements Serializable {
     private static String getMethodSignature(Class[] paramTypes, 
 					     Class retType) 
     {
-	StringBuffer sbuf = new StringBuffer();
+	StringBuilder sbuf = new StringBuilder();
 	sbuf.append('(');
 	for (int i = 0; i < paramTypes.length; i++) {
 	    sbuf.append(getClassSignature(paramTypes[i]));
@@ -1583,7 +1606,7 @@ public class ObjectStreamClass implements Serializable {
 	    int mask = Modifier.STATIC | Modifier.FINAL;
 	    if ((f.getModifiers() & mask) == mask) {
 		f.setAccessible(true);
-		return new Long(f.getLong(null));
+		return Long.valueOf(f.getLong(null));
 	    }
 	} catch (Exception ex) {
 	}
@@ -1792,8 +1815,10 @@ public class ObjectStreamClass implements Serializable {
 	private final ObjectStreamField[] fields;
 	/** number of primitive fields */
 	private final int numPrimFields;
-	/** unsafe field keys */
-	private final long[] keys;
+	/** unsafe field keys for reading fields - may contain dupes */
+	private final long[] readKeys;
+        /** unsafe fields keys for writing fields - no dupes */
+        private final long[] writeKeys;
 	/** field data offsets */
 	private final int[] offsets;
 	/** field type codes */
@@ -1811,16 +1836,21 @@ public class ObjectStreamClass implements Serializable {
 	FieldReflector(ObjectStreamField[] fields) {
 	    this.fields = fields;
 	    int nfields = fields.length;
-	    keys = new long[nfields];
+	    readKeys = new long[nfields];
+            writeKeys = new long[nfields];
 	    offsets = new int[nfields];
 	    typeCodes = new char[nfields];
 	    ArrayList typeList = new ArrayList();
-	    
+	    Set<Long> usedKeys = new HashSet<Long>();    
+
 	    for (int i = 0; i < nfields; i++) {
 		ObjectStreamField f = fields[i];
 		Field rf = f.getField();
-		keys[i] = (rf != null) ? 
+		long key = (rf != null) ? 
 		    unsafe.objectFieldOffset(rf) : Unsafe.INVALID_FIELD_OFFSET;
+                readKeys[i] = key;
+                writeKeys[i] = usedKeys.add(key) ?
+                    key : Unsafe.INVALID_FIELD_OFFSET;
 		offsets[i] = f.getOffset();
 		typeCodes[i] = f.getTypeCode();
 		if (!f.isPrimitive()) {
@@ -1856,7 +1886,7 @@ public class ObjectStreamClass implements Serializable {
 	     * in array should be equal to Unsafe.INVALID_FIELD_OFFSET.
 	     */
 	    for (int i = 0; i < numPrimFields; i++) {
-		long key = keys[i];
+		long key = readKeys[i];
 		int off = offsets[i];
 		switch (typeCodes[i]) {
 		    case 'Z':
@@ -1907,7 +1937,7 @@ public class ObjectStreamClass implements Serializable {
 		throw new NullPointerException();
 	    }
 	    for (int i = 0; i < numPrimFields; i++) {
-		long key = keys[i];
+		long key = writeKeys[i];
 		if (key == Unsafe.INVALID_FIELD_OFFSET) {
 		    continue;		// discard value
 		}
@@ -1968,7 +1998,7 @@ public class ObjectStreamClass implements Serializable {
 		switch (typeCodes[i]) {
 		    case 'L':
 		    case '[':
-			vals[offsets[i]] = unsafe.getObject(obj, keys[i]);
+			vals[offsets[i]] = unsafe.getObject(obj, readKeys[i]);
 			break;
 			
 		    default:
@@ -1989,7 +2019,7 @@ public class ObjectStreamClass implements Serializable {
 		throw new NullPointerException();
 	    }
 	    for (int i = numPrimFields; i < fields.length; i++) {
-		long key = keys[i];
+		long key = writeKeys[i];
 		if (key == Unsafe.INVALID_FIELD_OFFSET) {
 		    continue;		// discard value
 		}
@@ -2098,7 +2128,7 @@ public class ObjectStreamClass implements Serializable {
 	private final int hash;
 	private final boolean nullClass;
 	
-	FieldReflectorKey(Class<?> cl, ObjectStreamField[] fields,
+	FieldReflectorKey(Class cl, ObjectStreamField[] fields,
 			  ReferenceQueue<Class<?>> queue) 
 	{
 	    super(cl, queue);
